@@ -6,11 +6,13 @@
 :267: https://github.com/stackabletech/agent/pull/267[#267]
 :270: https://github.com/stackabletech/agent/pull/270[#270]
 :273: https://github.com/stackabletech/agent/pull/273[#273]
+:274: https://github.com/stackabletech/agent/pull/274[#274]
 
 === Added
 * Prints self-diagnostic information on startup ({270})
 * Check added on startup if the configured directories exist and are
   writable by the Stackable agent ({273}).
+* Missing directories are created ({274}).
 
 === Changed
 * Lazy validation of repository URLs changed to eager validation
